<resources>
    <string name="app_name">evidya1.2</string>
    <string name="hello">Hello</string>
    <string name="sumit">sumit</string>

    //ganesh

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ganesh Varma</string>
    <string name="nav_header_subtitle">ganesvarma@gamail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_subscription">Subscription</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_contact_us">Contact Us</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="home_button">Home</string>
    <string name="bottom_quiz">Quiz</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_account">Account</string>
    <string name="bottom_other">Other Options</string>
    <string name="nav_share">Share</string>
    <string name="nav_notification">Notifications</string>
    <string name="bell_icon">search_bar</string>

</resources>
